@@ -26,6 +26,7 @@ sys.path.insert(0, "..")
 
 from types import *
 import libxml2
+import MySQLdb
 from twisted.trial import unittest, runner, reporter
 import twisted.internet.base
 from twisted.internet import reactor, defer, error, base
@@ -68,9 +69,15 @@ class PokerUserStatsTestCase(unittest.TestCase):
             os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ -h '@MYSQL_TEST_DBHOST@' -e 'DROP DATABASE IF EXISTS pokernetworktest'")
 
     def setUp(self):
-        settings = pokernetworkconfig.Config([])
-        settings.doc = libxml2.parseMemory(settings_xml_server, len(settings_xml_server))
-        settings.header = settings.doc.xpathNewContext()
+#         settings = pokernetworkconfig.Config([])
+#         settings.doc = libxml2.parseMemory(settings_xml_server, len(settings_xml_server))
+#         settings.header = settings.doc.xpathNewContext()
+        self.destroyDb()
+        self.db = MySQLdb.connect(host = "@MYSQL_TEST_DBHOST@",
+                                  port = 3306, user = "@MYSQL_TEST_DBROOT@",
+                                  passwd = "@MYSQL_TEST_DBROOT_PASSWORD@")
+        self.db.query("CREATE DATABASE pokernetworktest")
+        self.db.select_db("pokernetworktest")
         #
         # Setup server
         #
@@ -79,7 +86,7 @@ class PokerUserStatsTestCase(unittest.TestCase):
 #        self.service.startService()
 
     def tearDown(self):
-        pass
+        self.destroyDb()
 #        d = self.service.stopService()
 #        return d
     # -------------------------------------------------------------------------
@@ -113,23 +120,90 @@ class PokerUserStatsTestCase(unittest.TestCase):
         self.assertEquals(f.getStatsClass("DOESNOTEXIST"), None)
         self.assertEquals(get_messages(), ["ERROR 'module' object has no attribute 'UserStatsDOESNOTEXISTLookup'"])
 
-        self.assertEquals(f.getStatsClass("RankLevel"), UserStatsRankLevelLookup)
+        self.assertEquals(f.getStatsClass("RankPercentile"), UserStatsRankPercentileLookup)
     # -------------------------------------------------------------------------
-    def test03_rankLevelAccessor(self):
-        """test03_rankLevelAccessor
-        make sure basic interfaces on the RankLevel accessor class works
-        correctly"""
-        
-        u = UserStatsRankLevelAccessor()
-        self.assertEquals(u.statsSupported, u.getSupportedStatsList(), [ 'level', 'rank' ])
+    # Mock ups below are used to test RankPercentile.
 
+    class MockTable:
+        def __init__(self, serial = None):
+            self.currency_serial = serial
+    class MockService:
+        def __init__(self, myDb = None):
+            self.db = myDb
+    class MockAvatar:
+        def __init__(self, avatarSerial = None):
+            self.serial = avatarSerial
+        def getSerial(self):
+            return self.serial
+    # -------------------------------------------------------------------------
+    def test03_rankPercentileAccessor(self):
+        """test03_rankPercentileAccessor
+        make sure basic interfaces on the RankPercentile accessor class works
+        correctly, and test when there is no database precent"""
+        statsList = [ 'rank', 'percentile' ]
+
+        u = UserStatsRankPercentileAccessor()
+        self.assertEquals(u.statsSupported.sort(), statsList.sort())
+        self.assertEquals(u.getSupportedStatsList().sort(), statsList.sort())
+        
         clear_all_messages()
         self.assertEquals(u.getStatValue('unknownstat'), None)
         self.assertEquals(get_messages(), [ "ERROR invalid user statistic, unknownstat" ])
 
-        self.assertEquals(u.getStatValue('level'), "UNIMPLEMENTED IN BASE CLASS")
-        self.assertEquals(u.getStatValue('rank'), "UNIMPLEMENTED IN BASE CLASS")
+        for stat in statsList:
+            # This will return None because the table.currency_serial is None
+            myTable = PokerUserStatsTestCase.MockTable()
+            myAvatar = PokerUserStatsTestCase.MockAvatar()
+            myService = PokerUserStatsTestCase.MockService()
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), None)
+            # This will return None because the table.currency_serial is negative
+            myTable = PokerUserStatsTestCase.MockTable(-1)
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), None)
+            # This will return None because the avatar.getSerial() returns None
+            myTable = PokerUserStatsTestCase.MockTable(1)
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), None)
+            # This will return None because the avatar.getSerial() returns -1
+            myAvatar = PokerUserStatsTestCase.MockAvatar(-1)
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), None)
+            # This will give a Attribute error because the service is None
+            myAvatar = PokerUserStatsTestCase.MockAvatar(1)
+            errorStr = ""
+            try:
+                u.getStatValue(stat, table = myTable, avatar = myAvatar, service = myService)
+                self.failIf(True)  # Should not be reached
+            except AttributeError, ae:
+                errorStr = ae.__str__()
+            self.assertEquals(errorStr, "'NoneType' object has no attribute 'cursor'")
 
+            # This will fail because there is no rank table
+            clear_all_messages()
+            myService = PokerUserStatsTestCase.MockService(self.db)
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), None)
+            self.assertEquals(get_messages(), [ "ERROR RankPercentile: (MySQL code 1146): Table 'pokernetworktest.rank' doesn't exist"])
+        self.db.query("CREATE TABLE rank (user_serial INT, currency_serial INT, rank INT, percentile TINYINT)")
+        self.db.query("INSERT INTO rank VALUES(1, 2, 20, 30)")
+
+        for (stat, value) in [ ('rank', 20), ('percentile', 30) ]:
+            myTable = PokerUserStatsTestCase.MockTable(1)
+            myAvatar = PokerUserStatsTestCase.MockAvatar(1)
+            myService = PokerUserStatsTestCase.MockService(self.db)
+
+            # Should be None because no row exists for 1, 1
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), None)
+
+            # Should now be the expected value
+            myTable = PokerUserStatsTestCase.MockTable(2)
+            self.assertEquals(u.getStatValue(stat, table = myTable, avatar = myAvatar,
+                                             service = myService), value)
+            
+
+            
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
